--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-.idea/sonarlint/
+.idea\modules.xml
+.idea\jarRepositories.xml
+.idea\compiler.xml
+.idea\libraries\
+.idea\sonarlint\
 *.iws
 *.iml
 *.ipr
