--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,13 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea\modules.xml
-.idea\jarRepositories.xml
-.idea\compiler.xml
-.idea\libraries\
-.idea\sonarlint\
+.idea/
+/out/
+/target/
 *.iws
 *.iml
 *.ipr
+*.iml
 
 ### Eclipse ###
 .apt_generated
